tests/functional/lang/eval-fail-match-3.err.exp
error:
       … while calling the 'match' builtin
         at /pwd/lang/eval-fail-match-3.nix:1:1:
            1| builtins.match "(.*" ""
             | ^
            2|

       error: invalid regular expression '(.*'
